--- a/app/src/main/res/layout/car_item_layout.xml
+++ b/app/src/main/res/layout/car_item_layout.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/lightgray">
+    android:layout_height="wrap_content">
+
+    <android.support.design.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:cardBackgroundColor="@color/lightgray">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:layout_margin="20dp"
+       >
 
         <LinearLayout
             android:id="@+id/carNameLayout"
@@ -23,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="C$36"
                 android:textColor="@color/lightblue"
-                android:textSize="25sp"
+                android:textSize="23sp"
                 android:textStyle="bold" />
 
             <View
@@ -38,7 +45,7 @@
                 android:gravity="end"
                 android:text="AVIS"
                 android:textColor="@color/redcolor"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -134,7 +141,7 @@
                     android:id="@+id/carImageView"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/Chervolet" />
+                    android:src="@drawable/chervolet" />
 
             </LinearLayout>
 
@@ -147,6 +154,7 @@
             android:orientation="horizontal"
             android:layout_below="@id/cardetailLayout">
             <TextView
+                android:id="@+id/pickupDate"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -162,6 +170,7 @@
                 android:background="@android:color/darker_gray"
                 />
             <TextView
+                android:id="@+id/dropOffDate"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -178,12 +187,14 @@
             android:orientation="horizontal"
             android:layout_below="@id/LineLayout">
             <TextView
+                android:id="@+id/pickup"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Pick-up"
                 />
             <TextView
+                android:id="@+id/txtcondition"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -192,6 +203,7 @@
                 android:textColor="@color/purple"
                 />
             <TextView
+                android:id="@+id/dropoff"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -201,5 +213,5 @@
         </LinearLayout>
 
     </RelativeLayout>
-
-</android.support.design.card.MaterialCardView>
+    </android.support.design.card.MaterialCardView>
+</LinearLayout>
